# UnitTests-TDD-Refactor-Workshop

./: README.md
JS/GildedRose/: package-lock.json
JS/reacttdd/: .eslintcache  package-lock.json  package.json
JS/reacttdd/src/: index.js  start.js
Java/: .gitignore  README.md  pom.xml
Javascript/GildedRose/: package-lock.json
cpp/: CMakeLists.txt  README.md
cpp/src/: CInterestingFunctions.cpp  CInterestingFunctions.h  CMakeLists.txt  CUnbelievableComplexStruct.h  ExternalCalls.h  GildedRose.cc  GildedRose.h  InterestingClass.cc  InterestingClass.cpp  InterestingClass.h  Main.cc  UnInstantiableClass.cc  UnInstantiableClass.cpp  UnInstantiableClass.h  UnbelievableComplexClass.h  UnbelivableComplexClass.h
cpp/test/: CMakeLists.txt
cpp/test/cpp_googletest_unittest/: CMakeLists.txt  GildedRoseGoogletestUnitTests.cc  GildedRoseGoogletestUnitTests.cpp
cpp/test/sanity_tests/: CMakeLists.txt  SanityTests.cc  SanityTests.cpp  SanityTestsMocking.cpp  SetupTeardown.cpp
csharp/: EnhancedGildedRose.sln  README.md
csharp/EGR-Production/: CentralReporter.cs  CustomerAccount.cs  CustomerOrder.cs  EGR-Production.csproj  GildedRoseManager.cs  Item.cs  NewItem.cs  Program.cs
csharp/EGR-Production/Gildedrose/: BigBrother.cs  CentralReporter.cs  CustomerAccount.cs  CustomerOrder.cs  GildedRoseManager.cs  Item.cs  NewItem.cs  Program.cs
csharp/EGR-Production/Legacycodeplayground/: ExternalCalls.cs  InterestingClass.cs  (+2 more)
csharp/EGR-Tests/: EGR-Tests.csproj  TestExample.cs
csharp/Trivia/: README.md  Trivia.sln
python/Trivia/: README.md  trivia.py
(+65 files in other folders)
